<?xml version="1.0"?>
<package>
    <name>RTK_adaptive_driver</name>
    <version>0.0.0</version>
    <description>RTK satellite filtering driver</description>

    <maintainer email="philippe.dandurand.1@ulaval.ca">Philippe Dandurand</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <export>

    </export>
</package>
